# AOC24

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
AOCD1P1/: AOCD1P1.cpp  AOCD1P1.h  CMakeLists.txt  README.md
AOCD1P2/: AOCD1P2.cpp  AOCD1P2.h  CMakeLists.txt  README.md
AOCD2P1/: AOCD2P1.cpp  AOCD2P1.h  CMakeLists.txt  README.md
AOCD2P2/: AOCD2P2.cpp  AOCD2P2.h  CMakeLists.txt  README.md
AOCD3P1/: AOCD3P1.cpp  AOCD3P1.h  CMakeLists.txt  README.md
AOCD3P2/: AOCD3P2.cpp  AOCD3P2.h  CMakeLists.txt  README.md
AOCD4P1/: AOCD4P1.cpp  AOCD4P1.h  CMakeLists.txt  README.md
AOCD4P2/: AOCD4P2.cpp  AOCD4P2.h  CMakeLists.txt  README.md
AOCD5P1/: AOCD5P1.cpp  AOCD5P1.h  CMakeLists.txt  README.md
AOCD5P2/: AOCD5P2.cpp  AOCD5P2.h  CMakeLists.txt  README.md
AOCD6P1/: AOCD6P1.cpp  AOCD6P1.h  CMakeLists.txt  README.md
playground/: CMakeLists.txt  main.cpp
